<resources>
    <string name="app_name" translatable="false">RockIt</string>
    <string name="logo_text" translatable="false">ROCK\nIT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="next">Next</string>
    <string name="email_form_error">Enter validate Email!</string>
    <string name="email_taken">This Email is already taken!</string>
    <string name="code">Verification code</string>
    <string name="email_subject">Confirm your email address</string>
    <string name="email_body">Please, confirm your email address by entering this verification code
        in the app to continue registration:</string>
    <string name="enter_code">Enter verification code, that we sent on your email</string>
    <string name="new_code">You can get new code in</string>
    <string name="resend">Resend code</string>
    <string name="empty_code_error">Enter code!</string>
    <string name="invalid_code">Invalid code!</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birth_date">Date of birth</string>
    <string name="enter_name">Please, enter your name and surname, and also make an unique login</string>
    <string name="login">Login</string>
    <string name="name_error">Incorrect name format!</string>
    <string name="surname_error">Incorrect surname format!</string>
    <string name="login_form_error">Incorrect login form!</string>
    <string name="login_taken_error">This login is already taken!</string>
    <string name="create_password">Create strong password</string>
    <string name="enter_password">Enter password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="pswrd_form_error">Incorrect password form!</string>
    <string name="pswrd_match_error">Passwords don\'t match!</string>
    <string name="unexpected_error">An unexpected error has occured</string>
    <string name="email_or_login">Email or login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_error">Sign in error</string>
    <string name="account_not_found">Account not found!</string>
    <string name="invalid_password">Invalid password!</string>
    <string name="empty_email_error">Input email or login!</string>
    <string name="empty_password_error">Input password!</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="sign_out">Sign out</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_existing">Choose existing photo</string>
    <string name="photo">Photo</string>
    <string name="back">Back</string>
    <string name="error_pick_file">You haven\'t picked file!</string>
    <string name="other">Other</string>
    <string name="account_settings">Account settings</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change password</string>
    <string name="change_login">Change login</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="change">Change</string>
    <string name="successfully_edit_pswrd">Password changed successfully</string>
    <string name="current_login">Current login:</string>
    <string name="new_login">New login</string>
    <string name="successfully_edit_login">Login changed successfully</string>
    <string name="bio">Bio</string>
    <string name="bio_length_error">Maximum length of bio is 300 characters</string>
    <string name="successfully_edit_name">Name changed successfully</string>
    <string name="successfully_edit_surname">Surname changed successfully</string>
    <string name="successfully_edit_bio">Bio changed successfully</string>
    <string name="change_email">Change email</string>
    <string name="current_email">Current email</string>
    <string name="new_email">New email</string>
    <string name="successfully_edit_email">Email changed successfully</string>
    <string name="new_content" translatable="false">+</string>
    <string name="post">Post</string>
    <string name="post_hint">What\'s up?</string>
    <string name="pick_photo_error">"The maximum number of photos is "</string>
    <string name="add_photo">Add photo</string>
    <string name="add_music">Add song</string>
    <string name="song">Music</string>
    <string name="search_music">Artists, songs or playlists</string>
    <string name="my_music">My song</string>
    <string name="for_you">For you</string>
    <string name="song_name">Song name</string>
    <string name="artist">Artist</string>
    <string name="song_name_error">Enter the name of the song!</string>
    <string name="song_artist_error">Enter the author of the song!</string>
    <string name="done">Done</string>
    <string name="successfuly_added_song">Song added successfuly</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="close">Close</string>
    <string name="delete_music">Delete this song from song</string>
    <string name="delete_my_music">Delete from my song</string>
    <string name="add_to_my_music">Add to my song</string>
    <string name="deleted_my_music">Successfully deleted from your song</string>
    <string name="deleted_music">Song successfuly deleted</string>
    <string name="added_to_my_music">Successfuly added to your song</string>
    <string name="nothing_found">Nothing found</string>
    <string name="select_music_error">The maximum number of songs is</string>
    <string name="empty_post">The post is empty!</string>
    <string name="delete_post">Delete post</string>
    <string name="search_user">Search user</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="network_error">Loading error. Please check your internet connection</string>
    <string name="changed_picture">Profile picture changed successfully.</string>
    <string name="deleted_post">Post deleted successfully.</string>
    <string name="enter_emal">Enter Email Adress</string>
    <string name="email_using">Your email adress will be used for signing in to your account</string>
    <string name="confirm_email">Confirm Email Adress</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="at">at</string>
    <string name="working">Sorry, we are working on this page!</string>
    <string name="player">Player</string>
    <string name="queue">Queue</string>
    <string name="verify_email">Please, verify your email adress by following the link we sent.</string>
    <string name="can_sign_in">Then you can sign in to your account.</string>
    <string name="playlists">Playlists</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="playlist_example_title">Example: Chill Vibes</string>
    <string name="songs">Songs</string>
    <string name="delete">Delete</string>
    <string name="new_playlist">New playlist</string>
    <string name="playlist_uploaded">Your playlist added successfully.</string>
    <string name="delete_my_playlists">Delete from my playlists</string>
    <string name="deleted_my_playlists">Deleted from your playlists</string>
    <string name="add_playlist">Add to My playlists</string>
    <string name="playlist_added">Added to your playlists.</string>
    <string name="playlist_deleted">Playlist deleted.</string>
    <string name="set_cover">Set cover</string>
    <string name="agreement">By pressing Next, you agree to the</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="new_post">New post</string>
    <string name="profile_pic">Profile picture</string>
    <string name="search">Search</string>
    <string name="new_song">New song</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_genre">Pick genre</string>
    <string name="album_name">Album name</string>
    <string name="new_album">New album</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="auditions">auditions</string>
    <string name="delete_album">Delete album</string>
    <string name="album_deleted">Album deleted</string>
    <string name="albums">Albums</string>
    <string name="choose_genre">Choose at least 1 favourite genre</string>
    <string name="new_from_following">New from artist you follow</string>
    <string name="you_may_like">You may like</string>
</resources>